Modified the misc.

--- a/_posts/2016-11-12-Laravel-5.3-Beginner-24.25.md
+++ b/_posts/2016-11-12-Laravel-5.3-Beginner-24.25.md
@@ -1,13 +1,15 @@
 ---
 layout: post
-title:  "Laravel 5.3으로 만들어보는 Mini Social Network"
+title:  "Laravel 5.3 Tutorial for Beginner - 24.25 Mini Social Network"
 categories: PHP
 tags: php laravel
 ---
-[Devlov의 강의](https://goo.gl/ND53L9)를 보고 내용 정리
+
+# 24. Social Network Custom Registration
+
+[Laravel 5.3 tutorials #24 Social Network Custom Registration](https://www.youtube.com/watch?v=Kwx7PMEID_c&index=24&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 정리
 
 우선 라라벨 프로젝트를 생성
-# 23. Social Network Custom Registration
 
 ## Migrate
 {% highlight bash %}
@@ -38,7 +40,7 @@ public function up()
 위의 두 항목 추가
 
 
-# 24. Social Network Change Custom Authentication
+# 25. Social Network Change Custom Authentication
 이전 단계에서 db users 테이블에서 2개항목을 추가하였기에 관련 내용을 적용한다.
 nullable()이나 default()로 줘도 되지만 유저 입력창을 생성한다.
 
