Modified some source code view with highlight

--- a/_posts/2016-11-09-Laravel-5.3-Beginner-13.View_composers.md
+++ b/_posts/2016-11-09-Laravel-5.3-Beginner-13.View_composers.md
@@ -9,15 +9,13 @@ tags: php laravel beginner
 # 13 View Composers
 
 ## 별도의 ServiceProvider 생성
-
 ```bash
 php artisan make:provider ComposerServiceProvider
 ```
 
-#### config/app.php
-
 생성한 Service Provider Class를 등록해준다.
 
+#### config/app.php
 ```php
 ...
 App\Providers\ComposerServiceProvider::class,
@@ -25,11 +23,9 @@ App\Providers\ComposerServiceProvider::class,
 ```
 
 ## ProfileComposer 생성
-
 Http에 ViewComposers 폴더를 생성하고 ProfileComposer.php 파일을 생성한다.
 
 #### App/Http/ViewComposers/ProfileComposer.php
-
 ```php
 <?php
 
@@ -74,10 +70,11 @@ public function profile()
 
 #### profile.blade.php
 이제 아래처럼 변수 사용이 가능하다.
-```php
+
+{% highlight php %}
 {{ $married }}
 {{ $test }}
-```
+{% endhighlight %}
 
 하지만 이 변수들은 profile view에서만 가능하다.
 
@@ -132,7 +129,6 @@ public function settings()
 만약 ProfileComposer에서 create라는 함수를 추가한다면
 
 #### App/Http/ViewComposers/ProfileComposer.php
-
 ```php
 public function create(View $view)
 {
