--- a/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
+++ b/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
@@ -8,7 +8,7 @@ tags: php laravel beginner
 
 # 12 Sharing data with all Views
 
-## 변수 하나 공유
+## 한개의 변수 공유
 
 #### App/Providers/AppServiceProvider.php
 ```php
@@ -24,18 +24,14 @@ use View;
 그리고 View에서 아래처럼 추가하면 `myname`을 사용할 수 있다.
 
 #### home.blade.php
-`home.blade.php`
-
-```php
+{% highlight php %}
 <h1>Hello, {{ $myname }}</h1>
-```
+{% endhighlight %}
 
 ## Carbon 패키지 사용해 보기
-
 나이(age) 정보를 share 변수로 등록해보는데 [Carbon 패키지](http://carbon.nesbot.com/docs/)를 사용해 본다.
 
 #### App/Providers/AppServiceProvider.php
-
 ```php
 use Carbon\Carbon;
 ...
@@ -50,9 +46,9 @@ use Carbon\Carbon;
 ```
 
 #### home.blade.php
-```php
+{% highlight php %}
 {{ $age }}
-```
+{% endhighlight %}
 
 ## Auth 유저 변수 공유
 
@@ -73,6 +69,6 @@ use Auth;
 ```
 
 #### home.blade.php
-```php
+{% highlight php %}
 {{ $auth->email }}
-```
+{% endhighlight %}
