--- a/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
+++ b/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
@@ -25,7 +25,7 @@ use View;
 
 #### home.blade.php
 {% highlight php %}
-<h1>Hello, {{ $myname }}</h1>
+<h1>Hello, \{{ $myname }}</h1>
 {% endhighlight %}
 
 ## Carbon 패키지 사용해 보기
