--- a/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
+++ b/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
@@ -4,7 +4,7 @@ title:  "Laravel 5.3 Tutorial for Beginner - 12. Sharing data with all Views"
 categories: PHP
 tags: php laravel beginner
 ---
-[Devlov의 강의](https://www.youtube.com/watch?v=naCcWcbZ3W4&index=12&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
+[Laravel 5.3 tutorials #12 Sharing data with all Views](https://www.youtube.com/watch?v=naCcWcbZ3W4&index=12&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
 
 # 12 Sharing data with all Views
 
@@ -25,7 +25,7 @@ use View;
 
 #### home.blade.php
 {% highlight php %}
-<h1>Hello, \{{ $myname }}</h1>
+<h1>Hello, @{{ $myname }}</h1>
 {% endhighlight %}
 
 ## Carbon 패키지 사용해 보기
