--- a/_posts/2016-11-09-Laravel-5.3-Beginner-13.View_composers.md
+++ b/_posts/2016-11-09-Laravel-5.3-Beginner-13.View_composers.md
@@ -4,7 +4,7 @@ title:  "Laravel 5.3 Tutorial for Beginner - 13. View Composers"
 categories: PHP
 tags: php laravel beginner
 ---
-[Devlov의 강의](https://www.youtube.com/watch?v=RvtARi5BlF0&index=13&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
+[Laravel 5.3 tutorials #13 View composers](https://www.youtube.com/watch?v=RvtARi5BlF0&index=13&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
 
 # 13 View Composers
 
