Post laravel with sentinel 09 restricting access

--- a/_posts/2016-11-12-Laravel-5.3-Beginner-24.25.md
+++ b/_posts/2016-11-12-Laravel-5.3-Beginner-24.25.md
@@ -1,18 +1,51 @@
 ---
 layout: post
-title:  "Laravel 5.3 Tutorial for Beginner - 26 Social Network Login with Username"
+title:  "Laravel 5.3 Tutorial for Beginner - 24.25 Mini Social Network"
 categories: PHP
-tags: php laravel beginner
+tags: php laravel
 ---
-[Laravel 5.3 tutorials #26 Social Network Login with Username](https://www.youtube.com/watch?v=LLzIZ6XEbEk&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb&index=26) 정리
 
-# #26 Social Network Login with Username
-`email` login 대신 새로 추가한 `username`으로 로그인 구현
+# 24. Social Network Custom Registration
 
-## username view
+[Laravel 5.3 tutorials #24 Social Network Custom Registration](https://www.youtube.com/watch?v=Kwx7PMEID_c&index=24&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 정리
 
-#### login.blade.php
-```php
+우선 라라벨 프로젝트를 생성
+
+## Migrate
+{% highlight bash %}
+php artisan migrate
+{% endhighlight %}
+
+## Auth
+{% highlight bash %}
+php artisan make:auth
+{% endhighlight %}
+
+## 유저 항목 customizing
+{% highlight php %}
+public function up()
+{
+    Schema::create('users', function (Blueprint $table) {
+        $table->increments('id');
+        $table->string('username', 32); // 추가
+        $table->date('dob');            // 추가
+        $table->string('name');
+        $table->string('email')->unique();
+        $table->string('password');
+        $table->rememberToken();
+        $table->timestamps();
+    });
+}
+{% endhighlight %}
+위의 두 항목 추가
+
+
+# 25. Social Network Change Custom Authentication
+이전 단계에서 db users 테이블에서 2개항목을 추가하였기에 관련 내용을 적용한다.
+nullable()이나 default()로 줘도 되지만 유저 입력창을 생성한다.
+
+## User Input 추가
+{% highlight php %}
 <div class="form-group{{ $errors->has('username') ? ' has-error' : '' }}">
     <label for="username" class="col-md-4 control-label">Username</label>
 
@@ -26,21 +59,40 @@ tags: php laravel beginner
         @endif
     </div>
 </div>
-```
 
-* email -> username
-* type -> text
-* E-Mail Address -> Username
+<div class="form-group{{ $errors->has('dob') ? ' has-error' : '' }}">
+    <label for="dob" class="col-md-4 control-label">dob</label>
 
-## login 관련 패키지 변경
-vendor를 건드리는 방법
+    <div class="col-md-6">
+        <input id="dob" type="date" class="form-control" name="dob" value="{{ old('dob') }}" required autofocus>
 
-#### Illuminate/Foundation/Auth/AuthenticatesUsers.php
-이곳에서 보면 `login()` 내에 `credentials()`를 체크하는 곳을 보면 `username()`를 사용한다. 하지만 이것은 그냥 함수이름이 그런 것이고 실제 내용은 `email` 항목이다. 따라서 아래처럼 변경해준다.
+        @if ($errors->has('dob'))
+            <span class="help-block">
+                <strong>{{ $errors->first('dob') }}</strong>
+            </span>
+        @endif
+    </div>
+</div>
+{% endhighlight %}
 
-```php
-public function username()
+## Controller에 항목 추가
+{% highlight php %}
+protected function create(array $data)
 {
-    return 'username';  // 'email' -> 'username'
+    return User::create([
+        'name' => $data['name'],
+        'email' => $data['email'],
+        'password' => bcrypt($data['password']),
+        'username' => $data['username'],        // 추가
+        'dob' => $data['dob'],                  // 추가
+    ]);
 }
-```
+{% endhighlight %}
+
+## Model fillabe 추가
+{% highlight php %}
+protected $fillable = [
+    'name', 'email', 'password', 'username', 'dob',
+];
+{% endhighlight %}
+username과 dob 추가
