--- a/_posts/2016-11-22-Laravel-5.3-Beginner-27.Profile.md
+++ b/_posts/2016-11-22-Laravel-5.3-Beginner-27.Profile.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel 5.3 Tutorial for Beginner - 26 Social Network Login with Username"
+title:  "Laravel 5.3 Tutorial for Beginner - 27. Profile"
 categories: PHP
 tags: php laravel beginner
 ---
