Post laravel with sentinel 10. visitors and manager

--- a/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
+++ b/_posts/2016-11-08-Laravel-5.3-Beginner-12.Sharing_data_with_all_views.md
@@ -24,8 +24,10 @@ use View;
 그리고 View에서 아래처럼 추가하면 `myname`을 사용할 수 있다.
 
 #### home.blade.php
-{% highlight php %}
-<h1>Hello, @{{ $myname }}</h1>
+{% highlight html%}
+{% raw %}
+<h1>Hello, {{ $myname }}</h1>
+{% endraw %}
 {% endhighlight %}
 
 ## Carbon 패키지 사용해 보기
@@ -46,9 +48,9 @@ use Carbon\Carbon;
 ```
 
 #### home.blade.php
-{% highlight php %}
+{% highlight html %}{% raw %}
 {{ $age }}
-{% endhighlight %}
+{% endraw %}{% endhighlight %}
 
 ## Auth 유저 변수 공유
 
@@ -69,6 +71,6 @@ use Auth;
 ```
 
 #### home.blade.php
-{% highlight php %}
+{% highlight html %}{% raw %}
 {{ $auth->email }}
-{% endhighlight %}
+{% endraw %}{% endhighlight %}
