--- a/_posts/2016-11-09-Laravel-5.3-Beginner-13.View_composers.md
+++ b/_posts/2016-11-09-Laravel-5.3-Beginner-13.View_composers.md
@@ -72,8 +72,10 @@ public function profile()
 이제 아래처럼 변수 사용이 가능하다.
 
 {% highlight php %}
+{% raw %}
 {{ $married }}
 {{ $test }}
+{% endraw %}
 {% endhighlight %}
 
 하지만 이 변수들은 profile view에서만 가능하다.
@@ -103,7 +105,8 @@ public function settings()
 ```
 
 #### settings.blade.php 생성
-```php
+{% highlight html %}
+{% raw %}
 @extends('layouts.master')
 
 @section('body')
@@ -123,7 +126,8 @@ public function settings()
     </div>
 </div>
 @endsection
-```
+{% endraw %}
+{% endhighlight %}
 
 ## 추가
 만약 ProfileComposer에서 create라는 함수를 추가한다면
