--- a/_posts/2016-11-11-Laravel-5.3-Beginner-15.Blade-subviews.md
+++ b/_posts/2016-11-11-Laravel-5.3-Beginner-15.Blade-subviews.md
@@ -29,11 +29,11 @@ tags: php laravel beginner
 ```
 
 ## footer.blade.php
-```php
+{% highlight html %}{% raw %}
 <footer class="footer">
   <p>&copy; {{ date('Y') }} Company, Inc.</p>
 </footer>
-```
+{% endraw %}{% endhighlight %}
 
 ## master.blade.php
 ```php
