--- a/_posts/2016-11-11-Laravel-5.3-Beginner-18.Pagination.md
+++ b/_posts/2016-11-11-Laravel-5.3-Beginner-18.Pagination.md
@@ -23,21 +23,21 @@ public function index()
 ```
 
 #### index.blade.php
-```php
+{% highlight html %}{% raw %}
 // 유저 list
 ...
 {{ $users->links() }}
-```
+{% endraw %}{% endhighlight %}
 
 ## Total 그리고 현재 count 보여주기
 
 #### index.blade.php
-```php
+{% highlight html %}{% raw %}
 <h3>{{ $users->total() }} total users</h3>
 <b>In this page ({{ $users->count() }} users)</b>
 ...
 // 유저 list
-```
+{% endraw %}{% endhighlight %}
 
 ## 이 외 blade template에서 사용할 수 있는 함수
 
