--- a/_posts/2016-11-12-Laravel-5.3-Beginner-24.25.md
+++ b/_posts/2016-11-12-Laravel-5.3-Beginner-24.25.md
@@ -39,13 +39,12 @@ public function up()
 {% endhighlight %}
 위의 두 항목 추가
 
-
 # 25. Social Network Change Custom Authentication
 이전 단계에서 db users 테이블에서 2개항목을 추가하였기에 관련 내용을 적용한다.
 nullable()이나 default()로 줘도 되지만 유저 입력창을 생성한다.
 
 ## User Input 추가
-{% highlight php %}
+{% highlight html %}{% raw %}
 <div class="form-group{{ $errors->has('username') ? ' has-error' : '' }}">
     <label for="username" class="col-md-4 control-label">Username</label>
 
@@ -73,7 +72,7 @@ nullable()이나 default()로 줘도 되지만 유저 입력창을 생성한다.
         @endif
     </div>
 </div>
-{% endhighlight %}
+{% endraw %}{% endhighlight %}
 
 ## Controller에 항목 추가
 {% highlight php %}
