--- a/_posts/2016-11-22-Laravel-5.3-Beginner-26.Login_with_Username.md
+++ b/_posts/2016-11-22-Laravel-5.3-Beginner-26.Login_with_Username.md
@@ -12,7 +12,8 @@ tags: php laravel beginner
 ## username view
 
 #### login.blade.php
-```php
+{% highlight php %}
+{% raw %}
 <div class="form-group{{ $errors->has('username') ? ' has-error' : '' }}">
     <label for="username" class="col-md-4 control-label">Username</label>
 
@@ -26,7 +27,8 @@ tags: php laravel beginner
         @endif
     </div>
 </div>
-```
+{% endraw %}
+{% endhighlight %}
 
 * email -> username
 * type -> text
