--- a/_posts/2016-11-22-Laravel-5.3-Beginner-27.Profile.md
+++ b/_posts/2016-11-22-Laravel-5.3-Beginner-27.Profile.md
@@ -6,8 +6,6 @@ tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #27 Social Network Profile](https://www.youtube.com/watch?v=Q_CEyRBX96o&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb&index=27) 정리
 
-# #27 Social Network Profile
-
 ## ProfileController 추가
 
 #### ProfileController.php
@@ -35,4 +33,4 @@ public function profile($username)
 }
 ```
 
-wher에서 3가지 방식이 있음.
+where에서 3가지 방식이 있음.
