Post laravel blog 02 post and comment

--- a/_posts/2016-11-24-Laravel_5.3_Blog-01.Setup_database.md
+++ b/_posts/2016-11-24-Laravel_5.3_Blog-01.Setup_database.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Build a Blog System with Laravel 5.3 - 01. Setup Database"
-categories: PHP
+title:  "Laravel 5.3 Blog System - 01. Setup Database"
+categories: php
 tags: php laravel blog-system
 ---
 [Build a Blog System with Laravel 5.3 - Setup Database, Display Post, Single Page, Comments System, Bootstrap Templates](http://www.hc-kr.com/2016/11/how-to-build-blog-system-with-laravel-53.html) 정리
