--- a/_posts/2016-11-24-Laravel_5.3_Sentinel-10.Visitors_and_manager.md
+++ b/_posts/2016-11-24-Laravel_5.3_Sentinel-10.Visitors_and_manager.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 10. Visitors & Manager"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #10 Visitors & Manager](https://www.youtube.com/watch?v=LgrqIsyJHVk) 참조
