--- a/_posts/2016-11-16-Laravel_5.3_Sentinel-07.Logout.md
+++ b/_posts/2016-11-16-Laravel_5.3_Sentinel-07.Logout.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 07. Logout & show content to logged users only"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #7 Logout & show content to logged users only](https://www.youtube.com/watch?v=mkW2EJVeyAg&list=PL3ZhWMazGi9KB9PajJHWvV2NJ1ITNoNGp&index=7) 참조
