--- a/_posts/2016-11-21-Laravel_5.3_Sentinel-08.Roles.md
+++ b/_posts/2016-11-21-Laravel_5.3_Sentinel-08.Roles.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 08. Roles"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #8 Roles](https://www.youtube.com/watch?v=1S209IXvWVs) 참조
