--- a/_posts/2016-11-22-Laravel_5.3_Sentinel-09.Restricting_access_according_to_roles.md
+++ b/_posts/2016-11-22-Laravel_5.3_Sentinel-09.Restricting_access_according_to_roles.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 09. Restricting Access According to Roles"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #9 Restricting Access According to Roles](https://www.youtube.com/watch?v=KoaX5N840Ao&list=PL3ZhWMazGi9KB9PajJHWvV2NJ1ITNoNGp&index=9) 참조
