--- a/_posts/2016-11-23-Laravel_5.3_Beginner-26.Login_with_username.md
+++ b/_posts/2016-11-23-Laravel_5.3_Beginner-26.Login_with_username.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 26. Social Network Login with Username"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #26 Social Network Login with Username](https://www.youtube.com/watch?v=LLzIZ6XEbEk&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb&index=26) 정리
