--- a/_posts/2016-11-23-Laravel_5.3_Beginner-27.Profile.md
+++ b/_posts/2016-11-23-Laravel_5.3_Beginner-27.Profile.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 27. Profile"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #27 Social Network Profile](https://www.youtube.com/watch?v=Q_CEyRBX96o&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb&index=27) 정리
