--- a/_posts/2016-11-24-Laravel_5.3_Beginner-28.Profile_design_and_date_mutators.md
+++ b/_posts/2016-11-24-Laravel_5.3_Beginner-28.Profile_design_and_date_mutators.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 28. Profile Design and Date"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #28 Profile Design and Date mutators](https://www.youtube.com/watch?v=TVyTJHaNXC0) 정리
