Post laravel blog 03 bootstrap

--- a/_posts/2016-11-08-Laravel_5.3_Beginner-09.10.Mutators_and_accessors.md
+++ b/_posts/2016-11-08-Laravel_5.3_Beginner-09.10.Mutators_and_accessors.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 09.10 Mutators & Accessors"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #9 Mutators](https://www.youtube.com/watch?v=syoRiyTBLpY&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb&index=9), [Laravel 5.3 tutorials #10 Accessors](https://www.youtube.com/watch?v=zqL8XKqwQCw&index=10&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
