--- a/_posts/2016-11-08-Laravel_5.3_Beginner-12.Sharing_data_with_all_views.md
+++ b/_posts/2016-11-08-Laravel_5.3_Beginner-12.Sharing_data_with_all_views.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 12. Sharing data with all Views"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #12 Sharing data with all Views](https://www.youtube.com/watch?v=naCcWcbZ3W4&index=12&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
@@ -24,11 +24,9 @@ use View;
 그리고 View에서 아래처럼 추가하면 `myname`을 사용할 수 있다.
 
 #### home.blade.php
-{% highlight html%}
-{% raw %}
+{% highlight html%}{% raw %}
 <h1>Hello, {{ $myname }}</h1>
-{% endraw %}
-{% endhighlight %}
+{% endraw %}{% endhighlight %}
 
 ## Carbon 패키지 사용해 보기
 나이(age) 정보를 share 변수로 등록해보는데 [Carbon 패키지](http://carbon.nesbot.com/docs/)를 사용해 본다.
