--- a/_posts/2016-11-10-Laravel_5.3_Beginner-14.Blade_layouts.md
+++ b/_posts/2016-11-10-Laravel_5.3_Beginner-14.Blade_layouts.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 14. Blade layouts"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Devlov의 강의](https://www.youtube.com/watch?v=a8ZpAf_tNh0&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
