--- a/_posts/2016-11-11-Laravel_5.3_Beginner-15.Blade_subviews.md
+++ b/_posts/2016-11-11-Laravel_5.3_Beginner-15.Blade_subviews.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 15. Blade subviews"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #15 Blade subviews](https://www.youtube.com/watch?v=LtTnL6NOL0k&index=15&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 정리
