--- a/_posts/2016-11-11-Laravel_5.3_Beginner-18.Pagination.md
+++ b/_posts/2016-11-11-Laravel_5.3_Beginner-18.Pagination.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 18. Pagination"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #18 Blade subviews](https://goo.gl/eGJiZY) 정리
