--- a/_posts/2016-11-12-Laravel_5.3_Beginner-24.25.Custom_registration_and_authentication.md
+++ b/_posts/2016-11-12-Laravel_5.3_Beginner-24.25.Custom_registration_and_authentication.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 24.25 Mini Social Network"
-categories: PHP
+categories: php
 tags: php laravel
 ---
 
