--- a/_posts/2016-11-13-Laravel_5.3_Sentinel-02.Setting_up.md
+++ b/_posts/2016-11-13-Laravel_5.3_Sentinel-02.Setting_up.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 02. Setting Up"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 `Sentinel` 은 `auth` 관련 패키지이다. 이것을 Laravel 5.3에서 사용하는 방법을 정리해본다.
