--- a/_posts/2016-11-24-Laravel_5.3_Blog-01.Setup_database.md
+++ b/_posts/2016-11-24-Laravel_5.3_Blog-01.Setup_database.md
@@ -131,6 +131,77 @@ class CreatePostsTable extends Migration
 }
 ```
 
+## Post, Comment Seed 생성
+```php
+php artisan make:seeder PostsTableSeeder
+
+php artisan make:seeder CommentsTableSeeder
+```
+
+#### database/seeds/PostsTableSeeder
+```php
+use App\Post;
+...
+public function run()
+{
+    DB::table('posts')->delete();
+
+    Post::create(array(
+         'author_id' => 2,
+         'title' => 'Hello World',
+         'description' => 'My First Post',
+         'body' => 'The most interesting function is show since the actual contents of the sequential file are generated here.
+
+가장 재밌는 함수는 show다. 왜냐면 sequential file의 실제 내용이 만들어지기 때문이다.
+
+For the sake of illustration, I present a slightly simplified version that abstracts some of the difficulties
+associated with kprobes that would detract from the seq_file issues:
+
+illustration 목적을 위해, 약간 간소화된 버전을 표현한다. kprobes와 연관된 어려운 것들 중 일부를 추상화 했다. seq_file 이슈에서 주의를 딴데로 돌리는 것.',
+         'slug' => 'my-first-post',
+         'images' => 'post-bg.jpg',
+         'active' => '1',
+     ));
+
+     Post::create(array(
+         'author_id' => 2,
+         'title' => 'Extended Attributes and Access Control Lists',
+         'description' => 'my next post',
+         'body' => 'Many filesystems provide features that extend the standard functionality offered by the VFS layer.',
+         'slug' => 'my-next-post',
+         'images' => 'post-sample-image.jpg',
+         'active' => '1',
+     ));
+}
+```
+
+#### database/seeds/CommentsTableSeeder
+```php
+use App\Comment;
+...
+public function run()
+{
+    DB::table('comments')->delete();
+
+    Comment::create(array(
+         'on_post' => 1,
+         'from_user' => 2,
+         'body' => '우와아 직이네요',
+     ));
+}
+```
+
+#### database/seeds/DatabaseSeeder
+```php
+...
+public function run()
+    {
+        $this->call(UsersTableSeeder::class);
+        $this->call(PostsTableSeeder::class);
+        $this->call(CommentsTableSeeder::class);
+    }
+```
+
 ## database refresh
 ```bash
 php artisan migrate:refresh --seed
