--- a/_posts/2016-11-24-Laravel_5.3_Blog-02.Post_and_comment.md
+++ b/_posts/2016-11-24-Laravel_5.3_Blog-02.Post_and_comment.md
@@ -110,3 +110,15 @@ class CommentController extends Controller
     ...
 }
 ```
+
+#### Routes/web.php
+```php
+Auth::routes();
+
+Route::get('/',         'PostController@index');
+Route::get('/home',     'PostController@index');
+Route::get('/{slug}',   'PostController@show')->where('slug', '[A-Za-z0-9-_]+');
+Route::group(['middleware' => ['auth']], function() {
+    Route::post('comment/add','CommentController@store');
+});
+```
