--- a/_posts/2016-11-09-Laravel_5.3_Beginner-13.View_composers.md
+++ b/_posts/2016-11-09-Laravel_5.3_Beginner-13.View_composers.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel 5.3 Tutorial for Beginner - 13. View Composers"
-categories: PHP
+categories: php
 tags: php laravel beginner
 ---
 [Laravel 5.3 tutorials #13 View composers](https://www.youtube.com/watch?v=RvtARi5BlF0&index=13&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
