--- a/_posts/2016-11-13-Laravel_5.3_Sentinel-03.Registration.md
+++ b/_posts/2016-11-13-Laravel_5.3_Sentinel-03.Registration.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 03. Registration"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #3 Registration](https://www.youtube.com/watch?v=xvlA1OSzZ5k&list=PL3ZhWMazGi9KB9PajJHWvV2NJ1ITNoNGp&index=3) 참조
