--- a/_posts/2016-11-14-Laravel_5.3_Sentinel-04.Create_user.md
+++ b/_posts/2016-11-14-Laravel_5.3_Sentinel-04.Create_user.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 04. Create User"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #4 Create User](https://www.youtube.com/watch?v=eWhEztW3KEU&index=4&list=PL3ZhWMazGi9KB9PajJHWvV2NJ1ITNoNGp) 참조
