--- a/_posts/2016-11-14-Laravel_5.3_Sentinel-05.Login.md
+++ b/_posts/2016-11-14-Laravel_5.3_Sentinel-05.Login.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 05. Login"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #5 Login](https://www.youtube.com/watch?v=zOvsxmSE_D4&index=5&list=PL3ZhWMazGi9KB9PajJHWvV2NJ1ITNoNGp) 참조
