--- a/_posts/2016-11-15-Laravel_5.3_Sentinel-06.Menu.md
+++ b/_posts/2016-11-15-Laravel_5.3_Sentinel-06.Menu.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Laravel with Sentinel - 06. Menu"
-categories: PHP
+categories: php
 tags: php laravel sentinel
 ---
 [Laravel 5.3 advanced Authentication #6 Menu](https://www.youtube.com/watch?v=RaGxwQYoZ5o&index=6&list=PL3ZhWMazGi9KB9PajJHWvV2NJ1ITNoNGp) 참조
