Post laravel blog 03 admin dashboard

--- a/_posts/2016-11-13-Laravel_5.3_Sentinel-02.Setting_up.md
+++ b/_posts/2016-11-13-Laravel_5.3_Sentinel-02.Setting_up.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 02. Setting Up"
+title:  "Laravel 5.3 Sentinel - 02. Setting Up"
 categories: php
 tags: php laravel sentinel
 ---
