--- a/_posts/2016-11-13-Laravel_5.3_Sentinel-03.Registration.md
+++ b/_posts/2016-11-13-Laravel_5.3_Sentinel-03.Registration.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 03. Registration"
+title:  "Laravel 5.3 Sentinel - 03. Registration"
 categories: php
 tags: php laravel sentinel
 ---
