--- a/_posts/2016-11-14-Laravel_5.3_Sentinel-04.Create_user.md
+++ b/_posts/2016-11-14-Laravel_5.3_Sentinel-04.Create_user.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 04. Create User"
+title:  "Laravel 5.3 Sentinel - 04. Create User"
 categories: php
 tags: php laravel sentinel
 ---
