--- a/_posts/2016-11-14-Laravel_5.3_Sentinel-05.Login.md
+++ b/_posts/2016-11-14-Laravel_5.3_Sentinel-05.Login.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 05. Login"
+title:  "Laravel 5.3 Sentinel - 05. Login"
 categories: php
 tags: php laravel sentinel
 ---
