--- a/_posts/2016-11-15-Laravel_5.3_Sentinel-06.Menu.md
+++ b/_posts/2016-11-15-Laravel_5.3_Sentinel-06.Menu.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 06. Menu"
+title:  "Laravel 5.3 Sentinel - 06. Menu"
 categories: php
 tags: php laravel sentinel
 ---
