--- a/_posts/2016-11-16-Laravel_5.3_Sentinel-07.Logout.md
+++ b/_posts/2016-11-16-Laravel_5.3_Sentinel-07.Logout.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 07. Logout & show content to logged users only"
+title:  "Laravel 5.3 Sentinel - 07. Logout & show content to logged users only"
 categories: php
 tags: php laravel sentinel
 ---
