--- a/_posts/2016-11-21-Laravel_5.3_Sentinel-08.Roles.md
+++ b/_posts/2016-11-21-Laravel_5.3_Sentinel-08.Roles.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 08. Roles"
+title:  "Laravel 5.3 Sentinel - 08. Roles"
 categories: php
 tags: php laravel sentinel
 ---
