--- a/_posts/2016-11-22-Laravel_5.3_Sentinel-09.Restricting_access_according_to_roles.md
+++ b/_posts/2016-11-22-Laravel_5.3_Sentinel-09.Restricting_access_according_to_roles.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 09. Restricting Access According to Roles"
+title:  "Laravel 5.3 Sentinel - 09. Restricting Access According to Roles"
 categories: php
 tags: php laravel sentinel
 ---
