--- a/_posts/2016-11-24-Laravel_5.3_Sentinel-10.Visitors_and_manager.md
+++ b/_posts/2016-11-24-Laravel_5.3_Sentinel-10.Visitors_and_manager.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel with Sentinel - 10. Visitors & Manager"
+title:  "Laravel 5.3 Sentinel - 10. Visitors & Manager"
 categories: php
 tags: php laravel sentinel
 ---
