--- a/_posts/2016-11-25-Laravel_5.3_Blog-04.Admin_daashboard.md
+++ b/_posts/2016-11-25-Laravel_5.3_Blog-04.Admin_daashboard.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel 5.3 Blog System - 03. Bootstrap theme view"
+title:  "Laravel 5.3 Blog System - 04 Admin Dashboard"
 categories: php
 tags: php laravel blog-system
 ---
