--- a/_posts/2016-11-24-Laravel_5.3_Blog-02.Post_and_comment.md
+++ b/_posts/2016-11-24-Laravel_5.3_Blog-02.Post_and_comment.md
@@ -75,7 +75,7 @@ class PostController extends Controller
         return view('home')->withPosts($posts)->withTitle($title);
     }
     ...
-    public function show($id)
+    public function show($slug)
     {
         $post = Post::where('slug',$slug)->first();
         if (!$post) {
