Post laraver blog 06 admin - create, store

--- a/_posts/2016-11-25-Laravel_5.3_Blog-04.Admin_dashboard.md
+++ b/_posts/2016-11-25-Laravel_5.3_Blog-04.Admin_dashboard.md
@@ -108,7 +108,7 @@ tags: php laravel blog-system
                         <li><a href="#">Profile</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-9 col-sm-offset-3 main">
+                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                     @yield('content')
                 </div>
             </div>
@@ -124,22 +124,6 @@ tags: php laravel blog-system
         <script src="../../assets/js/vendor/holder.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
-        <!-- show images thumbnail in create/edit page -->
-        <script type="text/javascript">
-            function readURL(input) {
-                if (input.files && input.files[0]) {
-                    var reader = new FileReader();
-                    reader.onload = function (e) {
-                        $('#showimages').attr('src', e.target.result);
-                    }
-                    reader.readAsDataURL(input.files[0]);
-                }
-            }
-            $("#inputimages").change(function () {
-                readURL(this);
-            });
-        </script>
     </body>
 </html>
 {% endraw %}{% endhighlight %}
