Modified laravel blog some content

--- a/_posts/2016-11-24-Laravel_5.3_Blog-01.Setup_database.md
+++ b/_posts/2016-11-24-Laravel_5.3_Blog-01.Setup_database.md
@@ -65,6 +65,7 @@ class UsersTableSeeder extends Seeder
     }
 }
 ```
+
 ## post, comment 테이블 추가
 ```bash
 php artisan make:migration create_posts_table
@@ -76,24 +77,24 @@ php artisan make:migration create_comments_table
 ```php
 class CreatePostsTable extends Migration
 {
-    public function up()
-    {
-        // posts table
-        Schema::create('posts', function(Blueprint $table) {
-            $table->increments('id'); // table Id's
-            $table->integer('author_id')->unsigned()->default(0);
-            $table->foreign('author_id')
-                ->references('id')->on('users')
-                ->onDelete('cascade');
-            $table->string('title')->unique();
-            $table->string('description'); // for meta description
-            $table->text('body'); // our posts
-            $table->string('slug')->unique();
-            $table->string('images');
-            $table->boolean('active');
-            $table->timestamps();
-        });
-    }
+  public function up()
+  {
+      // posts table
+      Schema::create('posts', function(Blueprint $table) {
+        $table->increments('id'); // table Id's
+        $table -> integer('author_id')->unsigned()->default(0);
+        $table->foreign('author_id')
+              ->references('id')->on('users')
+              ->onDelete('cascade');
+        $table->string('title')->unique();
+        $table->string('description'); // for meta description
+        $table->text('body'); // our posts
+        $table->string('slug')->unique();
+        $table->string('images');
+        $table->boolean('active');
+        $table->timestamps();
+      });
+  }
 
     public function down()
     {
@@ -104,18 +105,18 @@ class CreatePostsTable extends Migration
 
 #### database/migrations/CreateCommentsTable
 ```php
-class CreatePostsTable extends Migration
+class CreateCommentsTable extends Migration
 {
     public function up()
     {
-        // posts table
-        Schema::create('comments', function(Blueprint $table){
+        // comments table
+        Schema::create('comments', function(Blueprint $table) {
             $table->increments('id');
-            $table->integer('on_post')->unsigned()->default(0);
+            $table -> integer('on_post')->unsigned()->default(0);
             $table->foreign('on_post')
                 ->references('id')->on('posts')
                 ->onDelete('cascade');
-            $table->integer('from_user')->unsigned()->default(0);
+            $table -> integer('from_user')->unsigned()->default(0);
             $table->foreign('from_user')
                 ->references('id')->on('users')
                 ->onDelete('cascade');
@@ -126,12 +127,19 @@ class CreatePostsTable extends Migration
 
     public function down()
     {
-        Scheme::drop('comments');
+        // delete comments table
+        Schema::drop('comments');
     }
 }
 ```
 
-## Post, Comment Seed 생성
+## Post, Comment Model & Seed 생성
+```bash
+php artisan make:model Post
+
+php artisan make:model Comment
+
+```
 ```php
 php artisan make:seeder PostsTableSeeder
 
