--- a/_posts/2016-11-24-Laravel_5.3_Blog-02.Post_and_comment.md
+++ b/_posts/2016-11-24-Laravel_5.3_Blog-02.Post_and_comment.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Laravel 5.3 Blog System - 02. Setup Database"
+title:  "Laravel 5.3 Blog System - 02. Post And Comments"
 categories: php
 tags: php laravel blog-system
 ---
@@ -9,11 +9,6 @@ tags: php laravel blog-system
 # Post와 Comment 구현
 
 ## Model
-```bash
-php artisan make:model Post
-
-php artisan make:model Comment
-```
 
 #### App/Post
 ```php
