Added the laravel 28 CRUD migrations

--- a/_posts/2016-11-08-Laravel_5.3_Beginner-09.10.Mutators_and_accessors.md
+++ b/_posts/2016-11-08-Laravel_5.3_Beginner-09.10.Mutators_and_accessors.md
@@ -7,7 +7,7 @@ tags: php laravel beginner
 [Laravel 5.3 tutorials #9 Mutators](https://www.youtube.com/watch?v=syoRiyTBLpY&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb&index=9), [Laravel 5.3 tutorials #10 Accessors](https://www.youtube.com/watch?v=zqL8XKqwQCw&index=10&list=PL3ZhWMazGi9IYymniZgqwnYuPFDvaEHJb) 참조
 
 # 09 Mutators
-Mutators는 Setter와 같ek. 이것은 Controller에서 data를 get/set 해주는 것과 달리 Model에서 정해줄 수 있다.
+Mutators는 Setter와 같다. 이것은 Controller에서 data를 get/set 해주는 것과 달리 Model에서 정해줄 수 있다.
 
 ## setXXXAttribute 작성
 
