--- a/_posts/2016-11-12-Laravel_5.3_Beginner-24.25.Custom_registration_and_authentication.md
+++ b/_posts/2016-11-12-Laravel_5.3_Beginner-24.25.Custom_registration_and_authentication.md
@@ -88,7 +88,7 @@ protected function create(array $data)
 }
 {% endhighlight %}
 
-## Model fillabe 추가
+## Model fillalbe 추가
 {% highlight php %}
 protected $fillable = [
     'name', 'email', 'password', 'username', 'dob',
